{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 23,
  "lineage": "f6d71033-3460-0c21-a6e5-b5812e2214f9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742354061488:subnet/subnet-082e28ae33932ec69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-082e28ae33932ec69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "742354061488",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f5dc570ff2242ec8"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742354061488:subnet/subnet-0658e7e4702cb53bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0658e7e4702cb53bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "742354061488",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f5dc570ff2242ec8"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742354061488:vpc/vpc-0f5dc570ff2242ec8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0ef9e4d5f6322dacb",
            "default_route_table_id": "rtb-0a9956cd12ad0d949",
            "default_security_group_id": "sg-06e6505ad06429e28",
            "dhcp_options_id": "dopt-0e271f91d763dabd5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0f5dc570ff2242ec8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a9956cd12ad0d949",
            "owner_id": "742354061488",
            "tags": {
              "Name": "default vpc"
            },
            "tags_all": {
              "Name": "default vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_security_group_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742354061488:security-group/sg-03c50a7c6b3187adb",
            "description": "enable sql server access on port 3306",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c50a7c6b3187adb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "sql server access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f4025e35e659ab68"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database security group 2",
            "name_prefix": "",
            "owner_id": "742354061488",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database security group 2"
            },
            "tags_all": {
              "Name": "database security group 2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5dc570ff2242ec8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default_vpc",
            "aws_security_group.webserver_security_group_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_security_group_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:742354061488:security-group/sg-0f4025e35e659ab68",
            "description": "enable http access on port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4025e35e659ab68",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver security group 2",
            "name_prefix": "",
            "owner_id": "742354061488",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver security group 2"
            },
            "tags_all": {
              "Name": "webserver security group 2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5dc570ff2242ec8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default_vpc"
          ]
        }
      ]
    }
  ]
}